deleted skewed blocks on small devices to fix overflow

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,6 +2,7 @@
 	margin: 0 auto;
 	width: 100%;
 	max-width: 1200px;
+	overflow: hidden;
 }
 
 .white-block {
@@ -9,11 +10,13 @@
 	height: 40px;
 	width: 60%;
 	background-color: $lighter;
+	display: none;
 
 	&-right {
 		bottom: 0;
 		right: -50px;
 		transform: skew(135deg);
+		overflow: hidden;
 	}
 
 	&-left {
@@ -68,6 +71,7 @@
 	.white-block {
 		height: 50px;
 		width: 45%;
+		display: block;
 	}
 
 	.section-heading {
