--- a/sass/index.scss
+++ b/sass/index.scss
@@ -7,6 +7,7 @@
 html {
 	font-size: 62.5%;
 	scroll-behavior: smooth;
+	
 }
 
 body {
@@ -17,6 +18,7 @@ body {
 
 // nav
 .burger-btn {
+	overflow: hidden;
 	position: fixed;
 	top: 20px;
 	right: 20px;
